halka change vayo

--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -27,7 +27,6 @@
   \tableofcontents \addcontentsline{toc}{section}{TABLE OF CONTENTS}
 }
 
-
 % List of figures
 
 \newpage
@@ -38,6 +37,9 @@
 \newpage
 \listoftables \addcontentsline{toc}{section}{LIST OF TABLES}
 
+
+\newpage
+\input{sec/list_of_abbrev}
 
 %\input{sec/logistic-regression}
 \input{sec/introduction}
