--- a/major_project_report/sec/appendix.tex
+++ b/major_project_report/sec/appendix.tex
@@ -1,7 +1,7 @@
 % Appendix page
 \newpage
-\section*{Appendix A}
-\addcontentsline{toc}{section}{APPENDIX}
+\section*{APPENDIX A}
+\addcontentsline{toc}{section}{APPENDIX A}
 
 \begin{figure}[h]
   \centering
@@ -31,7 +31,8 @@
 \end{figure}
 
 \newpage
-\section*{Appendix B}
+\section*{APPENDIX B}
+\addcontentsline{toc}{section}{APPENDIX B}
 {\bf Stopwords used}\\
 
 
@@ -41,36 +42,45 @@
 {\bf POS tags used}\\
 
 
-JJ: adjective or numeral, ordinal\\
+{\bf JJ}: adjective or numeral, ordinal\\
 example: third ill-mannered pre-war regrettable oiled calamitous first separable
 ectoplasmic battery-powered participatory fourth still-to-be-named
 multilingual multi-disciplinary etc.
 
 
-JJR: adjective, comparative\\
+{\bf JJR}: adjective, comparative\\
 example: bleaker braver breezier briefer brighter brisker broader bumper busier
 calmer cheaper choosier cleaner clearer closer colder commoner costlier
 cozier creamier crunchier cuter etc.
 
 
-JJS: adjective, superlative\\
+{\bf JJS}: adjective, superlative\\
 example: calmest cheapest choicest classiest cleanest clearest closest commonest
 corniest costliest crassest creepiest crudest cutest darkest deadliest
 dearest deepest densest dinkiest etc.
 
 
-RB: adverb\\
+{\bf RB}: adverb\\
 example: occasionally unabatingly maddeningly adventurously professedly
 stirringly prominently technologically magisterially predominately
 swiftly fiscally pitilessly etc.
 
 
-RBR: adverb, comparative\\
+{\bf RBR}: adverb, comparative\\
 example: further gloomier grander graver greater grimmer harder harsher
 healthier heavier higher however larger later leaner lengthier less-
 perfectly lesser lonelier longer louder lower more etc.
 
 
-RBS: adverb, superlative\\
+{\bf RBS}: adverb, superlative\\
 example: best biggest bluntest earliest farthest first furthest hardest
 heartiest highest largest least less most nearest second tightest worst
+
+% \cleardoublepage
+% \section*{APPENDIX C}
+% \addcontentsline{toc}{section}{APPENDIX }
+% \begin{figure}[h]
+%   \centering
+%     \includegraphics[width=1\textwidth]{fig/aschedule.png}
+%     \caption{PERT Diagram of Project}
+% \end{figure}
