--- a/major_project_report/sec/methodology.tex
+++ b/major_project_report/sec/methodology.tex
@@ -6,7 +6,7 @@ A software requirement specification is a description of a software system to be
 \subsubsection{Functional Requirement}
 The functional requirement specification of the project are mainly categorized as user requirements, security requirements, and device requirement each of which are explained in detail below:
 \begin{itemize}
-\item User Requirement: User should have account on Facebook and user must have at least one post needed to analyze the personality.
+\item User Requirement: User should have account on Facebook and user must have at least one post needed to analyze the personality for the music recommendation.
 \item Security Requirement: The user can't have access to the Facebook API. User must provide their own login credentials.
 \item Device Requirement: System must be initiated on web-browser.
 
