--- a/major_project_report/sec/titlepage.tex
+++ b/major_project_report/sec/titlepage.tex
@@ -15,11 +15,11 @@
   \includegraphics[height=1.6in]{fig/tu-logo}\\
   {\Large\sc Tribhuvan University}\\
   {\Large\sc Institute of Engineering}\\
-  Central Campus, Pulchowk
+  Pulchowk Campus
   \\[1.5cm]
 
   A MAJOR PROJECT REPORT ON\\
-  {\Huge\sc Personality Based \\[5pt] Music Recommendation System}\\[1cm]
+  {\LARGE \sc Personality Based \\[5pt] Music Recommendation System}\\[1cm]
 
   By:\\
   {\bf Abhishek Paudel} (070/BCT/502)\\
