--- a/major_project_report/sec/list_of_abbrev.tex
+++ b/major_project_report/sec/list_of_abbrev.tex
@@ -1,22 +1,22 @@
 
-\newpage
 \section*{LIST OF ABBREVIATIONS}
 
-API		Application Package Interface
-CBF		Content Based Filtering
-CF		Collaborative Filtering
-CSS		Cascading Style Sheet
-DFD		Data Flow Diagram
-ERD		Entity Relationship Diagram
-HTML	Hyper Text Markup Language
-IR		Information Retrieval
-JS		JavaScript
-ML		Machine Learning
-MVT		Model-View-Template
-NLP		Natural Language Processing
-NLTK	Natural Language ToolKit
-ORDBMS	Object-Relational Database Management System
-PBMRS	Personality Based Music Recommendation System
-PoS		Part of Speech
-UI		User Interface
-
+\begin{tabular}{l l}
+API & Application Package Interface\\
+CBF & Content Based Filtering\\
+CF & Collaborative Filtering\\
+CSS & Cascading Style Sheet\\
+DFD & Data Flow Diagram\\
+ERD & Entity Relationship Diagram\\
+HTML & Hyper Text Markup Language\\
+IR & Information Retrieval\\
+JS & JavaScript\\
+ML & Machine Learning\\
+MVT & Model-View-Template\\
+NLP & Natural Language Processing\\
+NLTK & Natural Language ToolKit\\
+ORDBMS & Object-Relational Database Management System\\
+PBMRS & Personality Based Music Recommendation System\\
+PoS & Part of Speech\\
+UI & User Interface\\
+\end{tabular}
