--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -37,6 +37,7 @@
 \newpage
 \listoftables \addcontentsline{toc}{section}{LIST OF TABLES}
 
+% List of Abbreviation
 
 \newpage
 \input{sec/list_of_abbrev}
