--- a/major_project_report/sec/list_of_abbrev.tex
+++ b/major_project_report/sec/list_of_abbrev.tex
@@ -1,6 +1,6 @@
 
 \section*{LIST OF ABBREVIATIONS}
-
+\addcontentsline{toc}{section}{LIST OF ABBREVIATIONS}
 \begin{tabular}{l l}
 API & Application Package Interface\\
 CBF & Content Based Filtering\\
