--- a/major_project_report/sec/titlepage.tex
+++ b/major_project_report/sec/titlepage.tex
@@ -11,37 +11,33 @@
   \thispagestyle{empty}
   \centering
   \normalsize
-
-  \includegraphics[height=1.6in]{fig/tu-logo}\\
-  {\Large\sc Tribhuvan University}\\
-  {\Large\sc Institute of Engineering}\\
-  Pulchowk Campus
+  
+  \includegraphics[width=1.3in]{fig/tu-logo}\\
+  % \includegraphics[height=1.6in]{fig/tu-logo}\\
+  {TRIBHUVAN UNIVERSITY}\\
+  {INSTITUTE OF ENGINEERING}\\
+  PULCHOWK CAMPUS
   \\[1.5cm]
 
-  A MAJOR PROJECT REPORT ON\\
-  {\LARGE \sc Personality Based \\[5pt] Music Recommendation System}\\[1cm]
+  {\bf PERSONALITY BASED MUSIC RECOMMENDATION SYSTEM}\\[1.5cm]
 
   By:\\
   {\bf Abhishek Paudel} (070/BCT/502)\\
-  {\bf Brihat Ratna Bajracharya} (070/BCT/13)\\
+  {\bf Brihat Ratna Bajracharya} (070/BCT/513)\\
   {\bf Miran Ghimire} (070/BCT/521)\\
-	{\bf Nabin Bhattarai} (070/BCT/522)\\
-
-  ~
+  {\bf Nabin Bhattarai} (070/BCT/522)\\[1.5cm]
+  % ~
 
   A PROJECT WAS SUBMITTED TO THE DEPARTMENT OF ELECTRONICS AND COMPUTER
   ENGINEERING IN PARTIAL FULFILLMENT OF THE REQUIREMENT FOR THE BACHELOR'S
-  DEGREE IN ELECTRONICS \& COMMUNICATION / COMPUTER ENGINEERING
-
-  ~
+  DEGREE IN ELECTRONICS \& COMMUNICATION / COMPUTER ENGINEERING\\[1.5cm]
+  % ~
 
   DEPARTMENT OF ELECTRONICS AND COMPUTER ENGINEERING\\
   LALITPUR, NEPAL
 
   \vfill
-  \large
-	\today
-  %%July, 2017
+  AUGUST 1, 2017
 
 }
 
