--- a/major_project_report/sec/result.tex
+++ b/major_project_report/sec/result.tex
@@ -179,64 +179,67 @@ The followings tables show the confusion matrix of Naive Bayes for Big Five Pers
 %\begin{table}
 
 \begin{center}
-\begin{tabular}{| l | c |}
-\hline
-{\bf Recommendation Model} & {\bf RMSE}\\
-\hline
-Global Baseline Algorithm & 2.86\\
-\hline
-User to User Collaborative Filtering with user & \\ rating matrix & 3.89\\
-\hline
-User to User Collaborative Filtering with user & \\ personality matrix & 3.20\\
-\hline
-User to User Collaborative Filtering with user & \\ rating matrix with combination of global baseline & 4.72\\
-\hline
-User to User Collaborative Filtering with user & \\ personality matrix with combination of global baseline & 3.10\\
-\hline
-User to User Collaborative Filtering with weighted & \\ average of user personality matrix and user rating matrix & 3.2\\
-\hline
-User to User Collaborative Filtering with weighted & \\ average of user personality matrix and user rating matrix & \\ with combination of Global Baseline Algorithm & 3.04\\
-\hline
-Matrix factorization & 0.88\\
-\hline
-\end{tabular}
+  \begin{table}
+    \begin{tabular}{| l | c |}
+      \hline
+      {\bf Recommendation Model} & {\bf RMSE}\\
+      \hline
+      Global Baseline Algorithm & 2.86\\
+      \hline
+      User to User Collaborative Filtering with user & \\ rating matrix & 3.89\\
+      \hline
+      User to User Collaborative Filtering with user & \\ personality matrix & 3.20\\
+      \hline
+      User to User Collaborative Filtering with user & \\ rating matrix with combination of global baseline & 4.72\\
+      \hline
+      User to User Collaborative Filtering with user & \\ personality matrix with combination of global baseline & 3.10\\
+      \hline
+      User to User Collaborative Filtering with weighted & \\ average of user personality matrix and user rating matrix & 3.2\\
+      \hline
+      User to User Collaborative Filtering with weighted & \\ average of user personality matrix and user rating matrix & \\ with combination of Global Baseline Algorithm & 3.04\\
+      \hline
+      Matrix factorization & 0.88\\
+      \hline
+    \end{tabular}
+    \caption{RMSE of Recommendation System Models}
+  \end{table}
 \end{center}
 
 Effects of change in number of nearest neighborhood in the different collaborative filtering models.
 \begin{figure}[h]
   \centering
-    \includegraphics[width=1\textwidth]{fig/rmse_global_baseline.png}
-    \caption{}
+    \includegraphics[width=1\textwidth]{fig/rmse_cf.png}
+    \caption{RMSE of collaborative filtering with user rating matrix}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-    \includegraphics[width=1\textwidth]{fig/rmse_global_baseline.png}
-    \caption{}
+    \includegraphics[width=1\textwidth]{fig/rmse_cf_personality.png}
+    \caption{RMSE of collaborative filtering with similarity interm of personality matrix}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-    \includegraphics[width=1\textwidth]{fig/rmse_global_baseline.png}
-    \caption{}
+    \includegraphics[width=1\textwidth]{fig/rmse_cf_global.png}
+    \caption{RMSE of collaborative filtering combined with global baseline with user rating matrix}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-    \includegraphics[width=1\textwidth]{fig/rmse_global_baseline.png}
-    \caption{}
+    \includegraphics[width=1\textwidth]{fig/rmse_cf_global_personality.png}
+    \caption{RMSE of collaborative filtering combined with global baseline with user personality matrix}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-    \includegraphics[width=1\textwidth]{fig/rmse_global_baseline.png}
-    \caption{}
+    \includegraphics[width=1\textwidth]{fig/rmse_cf_average.png}
+    \caption{RMSE of collaborative filtering with user rating and personality matrix}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-    \includegraphics[width=1\textwidth]{fig/rmse_global_baseline.png}
-    \caption{}
+    \includegraphics[width=1\textwidth]{fig/rmse_cf_combined_average.png}
+    \caption{RMSE of collaborative filtering with user rating and personality matrix combined with global baseline}
 \end{figure}
 
 
